--- a/pages/projection.html
+++ b/pages/projection.html
@@ -3,6 +3,13 @@ layout: default
 title: Projection for National Assembly Seats
 
 ---
+<style>
+overallProjection {
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+</style>
 <body>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
