--- a/pages/projection.html
+++ b/pages/projection.html
@@ -15,6 +15,6 @@ overallProjection {
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
-<div id="overallProjection" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>
+<div id="overallProjection" ></div>
 <script src="js/projection.js"></script>
 </body>
