--- a/pages/projection.html
+++ b/pages/projection.html
@@ -9,12 +9,20 @@ overallProjection {
     width:100%;
     position:absolute;
 }
+div.a {
+    text-align: center;
+    margin: 10%;
+}
 </style>
 <body>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
+<div class="a">
+<h2>Overall Projection of National Assembly of Pakistan</h2>
+<p>Pakistan is holding it general election on 25 July 2018 for its national as well as provincial. We have leveraged some machine learning and data science techniques to project seats for national assembly. Following Graph shows an overall projection for national assembly seats. </p>
+</div>
 <div id="overallProjection" ></div>
 <script src="js/projection.js"></script>
 </body>
