--- a/pages/projection.html
+++ b/pages/projection.html
@@ -11,7 +11,8 @@ overallProjection {
 }
 div.a {
     text-align: center;
-    margin: 10%;
+    margin-left: 10%;
+    margin-right:10%;
 }
 </style>
 <body>
