--- a/pages/projection.html
+++ b/pages/projection.html
@@ -10,7 +10,7 @@ overallProjection {
     position:absolute;
 }
 div.a {
-    text-align: center;
+    text-align: left;
     margin-left: 10%;
     margin-right:10%;
 }
