--- a/pages/projection.html
+++ b/pages/projection.html
@@ -14,14 +14,20 @@ div.a {
     margin-left: 10%;
     margin-right:10%;
 }
+div.b{
+	text-align:center;
+
+}
+
 </style>
 <body>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
+<h3 class="b">National Assembly Projection</h3>
 <div class="a">
-<h3>National Assembly Projection</h3>
+
 <p>Pakistan is holding it general election on 25 July 2018 for its national as well as provincial. We have leveraged some machine learning and data science techniques to project seats for national assembly. Following Graph shows an overall projection for national assembly seats. </p>
 </div>
 <div id="overallProjection" ></div>
