--- a/pages/projection.html
+++ b/pages/projection.html
@@ -16,6 +16,8 @@ div.a {
 }
 div.b{
 	text-align:center;
+	margin-left: 10%;
+    margin-right:10%;
 
 }
 
@@ -24,8 +26,10 @@ div.b{
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
+<div class="b">
+<h3 class="b">Seats Projection for National Assembly</h3>
 
-<h3 class="b">National Assembly Projection</h3>
+</div>
 <div class="a">
 
 <p>Pakistan is holding it general election on 25 July 2018 for its national as well as provincial. We have leveraged some machine learning and data science techniques to project seats for national assembly. Following Graph shows an overall projection for national assembly seats. </p>
