two js file in one html

--- a/pages/projection.html
+++ b/pages/projection.html
@@ -28,7 +28,6 @@ div.b{
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 <div class="b">
 <h3 class="b">Seats Projection for National Assembly</h3>
-
 </div>
 <div class="a">
 
@@ -36,4 +35,16 @@ div.b{
 </div>
 <div id="overallProjection" ></div>
 <script src="js/projection.js"></script>
+
+<div class="b">
+<h3 class="b">Seats Projection for National Assembly</h3>
+</div>
+<div class="a">
+
+<p>Pakistan is holding it general election on 25 July 2018 for its national as well as provincial. We have leveraged some machine learning and data science techniques to project seats for national assembly. Following Graph shows an overall projection for national assembly seats. </p>
+</div>
+<div id="overallProjection" ></div>
+<script src="js/kpk.js"></script>
+
+
 </body>
