two js file in one html

--- a/pages/projection.html
+++ b/pages/projection.html
@@ -11,13 +11,13 @@ overallProjection {
 }
 div.a {
     text-align: left;
-    margin-left: 10%;
-    margin-right:10%;
+    margin-left: 20%;
+    margin-right:20%;
 }
 div.b{
 	text-align:center;
-	margin-left: 10%;
-    margin-right:10%;
+	margin-left: 20%;
+    margin-right:20%;
 
 }
 
@@ -31,7 +31,7 @@ div.b{
 </div>
 <div class="a">
 
-<p>Pakistan is holding it general election on 25 July 2018 for its national as well as provincial. We have leveraged some machine learning and data science techniques to project seats for national assembly. Following Graph shows an overall projection for national assembly seats. </p>
+<p>Pakistan is holding it general election on 25 July 2018 for its national as well as provincial assembly. We have leveraged some machine learning and data science techniques to project seats for national assembly. Following Graph shows an overall projection for national assembly seats. </p>
 </div>
 <div id="overallProjection" ></div>
 <script src="js/projection.js"></script>
@@ -43,7 +43,7 @@ div.b{
 
 <p>Pakistan is holding it general election on 25 July 2018 for its national as well as provincial. We have leveraged some machine learning and data science techniques to project seats for national assembly. Following Graph shows an overall projection for national assembly seats. </p>
 </div>
-<div id="overallProjection" ></div>
+<div id="container" ></div>
 <script src="js/kpk.js"></script>
 
 
