--- a/pages/projection.html
+++ b/pages/projection.html
@@ -9,6 +9,11 @@ overallProjection {
     width:100%;
     position:absolute;
 }
+container{
+    height:100%;
+    width:100%;
+    position:absolute;
+}
 div.a {
     text-align: left;
     margin-left: 20%;
@@ -37,11 +42,12 @@ div.b{
 <script src="js/projection.js"></script>
 
 <div class="b">
-<h3 class="b">Seats Projection for National Assembly</h3>
+<h3 class="b">Popularity Trends for Top 3 Political Parties on Twitter</h3>
 </div>
 <div class="a">
 
-<p>Pakistan is holding it general election on 25 July 2018 for its national as well as provincial. We have leveraged some machine learning and data science techniques to project seats for national assembly. Following Graph shows an overall projection for national assembly seats. </p>
+<p>We also have used monitored twitter to gage changing popularity levels of top three political parities. Following graphs 
+shows changing popularity trends over the days. </p>
 </div>
 <div id="container" ></div>
 <script src="js/kpk.js"></script>
