--- a/index.html
+++ b/index.html
@@ -4,29 +4,61 @@ title: election prediction
 ---
 
 
+---
+layout: default
+title: Projection for National Assembly Seats
+
+---
+<style>
+overallProjection {
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+container{
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+div.a {
+    text-align: left;
+    margin-left: 20%;
+    margin-right:20%;
+}
+div.b{
+	text-align:center;
+	margin-left: 20%;
+    margin-right:20%;
+
+}
+
+</style>
 <body>
- 
- <div id="container" style="width: 800px; height: 500px; margin: 0 auto"></div>
- <div id="container1"  style="width: 600px; height: 450px; margin: 0 auto"></div>
- 
- 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/data.js"></script>
-<script src="https://code.highcharts.com/modules/series-label.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/series-label.js"></script>
+<div class="b">
+<h3 class="b">Seats Projection for National Assembly</h3>
+</div>
+<div class="a">
 
+<p>Pakistan is holding it general election on 25 July 2018 for its national as well as provincial assembly.
+ We have leveraged some machine learning and data science techniques to project seats for national assembly.
+ Following Graph shows an overall projection for national assembly seats. </p>
+</div>
+<div id="overallProjection" ></div>
+<script src="js/projection.js"></script>
 
+<div class="b">
+<h3 class="b">Popularity Trends for Top 3 Political Parties on Twitter</h3>
+</div>
+<div class="a">
 
-<!-- Additional files for the Highslide popup effect -->
-<script src="https://www.highcharts.com/media/com_demo/js/highslide-full.min.js"></script>
-<script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
-<link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
+<p>We also have monitored twitter to gage changing popularity levels of top three political parities. Following graphs 
+shows changing popularity trends over the days. </p>
+</div>
+<div id="container" ></div>
 <script src="js/index.js"></script>
 
-</body>
 
+</body>
