--- a/pages/punjab.html
+++ b/pages/punjab.html
@@ -5,32 +5,55 @@ title: Punjab Predictions
 ---
 
 
+<style>
+overallProjection {
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+container{
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+div.a {
+    text-align: left;
+    margin-left: 20%;
+    margin-right:20%;
+}
+div.b{
+	text-align:center;
+	margin-left: 20%;
+    margin-right:20%;
+
+}
+
+</style>
 <body>
-
- <div id="container" style="width: 800px; height: 500px; margin: 0 auto"></div>
- <div id="container1"  style="width: 600px; height: 450px; margin: 0 auto"></div>
-
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/data.js"></script>
-<script src="https://code.highcharts.com/modules/series-label.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/series-label.js"></script>
+<div class="b">
+<h3 class="b">Projection of National Assembly Seats from Punjab</h3>
+</div>
+<div class="a">
 
+<p>Punjab is considered as one of the most important province as it has more seats than all other provinces combined. Due to
+quantiave significane, Punjab is a battle ground for all major political parties. PMLN has governed it for last 10 years and it 
+still got a strong hold in here. Here is the breakdown of seats in Punjab. </p>
+</div>
+<div id="overallProjection" ></div>
+<script src="js/projection_punjab.js"></script>
 
+<div class="b">
+<h3 class="b">Popularity Trends in Punjab</h3>
+</div>
+<div class="a">
 
-<!-- Additional files for the Highslide popup effect -->
-<script src="https://www.highcharts.com/media/com_demo/js/highslide-full.min.js"></script>
-<script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
-<link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
+<p>Due to high literacy rates, people of punjab are very active on twitter. Following graph shows trend of 3 major political parties in Punjab. </p>
+</div>
+<div id="container" ></div>
 <script src="js/punjab.js"></script>
 
+
 </body>
-
-<script>
-
-
-</script>
