--- a/pages/punjab.html
+++ b/pages/punjab.html
@@ -39,7 +39,7 @@ div.b{
 <div class="a">
 
 <p>Punjab is considered as one of the most important province as it has more seats than all other provinces combined. Due to
-quantiave significane, Punjab is a battle ground for all major political parties. PMLN has governed it for last 10 years and it 
+quantitative significance, Punjab is a battle ground for all major political parties. PMLN has governed it for last 10 years and it 
 still got a strong hold in here. Here is the breakdown of seats in Punjab. </p>
 </div>
 <div id="overallProjection" ></div>
