--- a/pages/sindh.html
+++ b/pages/sindh.html
@@ -1,37 +1,59 @@
 ---
 layout: default
-title: election prediction
+title: Sindh Prediction
 ---
 
 
+<style>
+overallProjection {
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+container{
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+div.a {
+    text-align: left;
+    margin-left: 20%;
+    margin-right:20%;
+}
+div.b{
+	text-align:center;
+	margin-left: 20%;
+    margin-right:20%;
+
+}
+
+</style>
 <body>
-
-  <div id="container" style="width: 800px; height: 500px; margin: 0 auto"></div>
- <div id="container1"  style="width: 600px; height: 450px; margin: 0 auto"></div>
- 
- 
- 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/data.js"></script>
-<script src="https://code.highcharts.com/modules/series-label.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/series-label.js"></script>
+<div class="b">
+<h3 class="b">Projection of National Assembly Seats from Sindh</h3>
+</div>
+<div class="a">
 
+<p>Sindh is second largest province with 64 national assembly seats. People's party have a strong hold in rural Sindh while MQM enjoyed 
+majority in major metropolitan cities like Karachi and Hyderabad. After hates speeches and governemnt bans on MQM's leader, it 
+is said that Karachi is up for grabs. Following graph shows projection for Sindh's National Assembly seats.  </p>
+</div>
+<div id="overallProjection" ></div>
+<script src="js/projection_sindh.js"></script>
 
+<div class="b">
+<h3 class="b">Popularity Trends in Sindh</h3>
+</div>
+<div class="a">
 
-<!-- Additional files for the Highslide popup effect -->
-<script src="https://www.highcharts.com/media/com_demo/js/highslide-full.min.js"></script>
-<script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
-<link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
+<p>Although rural Sindh have low literacy rates and use of technology but major cities like Karachi is considered as hub of education and technology. Due
+to the awareness, twitter trends from Sindh are interesting. </p>
+</div>
+<div id="container" ></div>
 <script src="js/sindh.js"></script>
 
+
 </body>
-
-<script>
-
-
-</script>
