baluchistan added added

--- a/pages/kpk.html
+++ b/pages/kpk.html
@@ -34,7 +34,7 @@ div.b{
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 <div class="b">
-<h3 class="b">Projection of National Assembly Seats from Sindh</h3>
+<h3 class="b">Projection of National Assembly Seats from KPK</h3>
 </div>
 <div class="a">
 
@@ -43,10 +43,10 @@ the province and it will get its government back despite past history of the pro
 shows projection of seats for KPK.   </p>
 </div>
 <div id="overallProjection" ></div>
-<script src="js/projection_sindh.js"></script>
+<script src="js/projection_KPK.js"></script>
 
 <div class="b">
-<h3 class="b">Popularity Trends in Sindh</h3>
+<h3 class="b">Popularity Trends in KPK</h3>
 </div>
 <div class="a">
 
