baluchistan added added

--- a/pages/balochistan.html
+++ b/pages/balochistan.html
@@ -36,9 +36,7 @@ div.b{
 </div>
 <div class="a">
 
-<p>Sindh is second largest province with 64 national assembly seats. People's party have a strong hold in rural Sindh while MQM enjoyed 
-majority in major metropolitan cities like Karachi and Hyderabad. After hates speeches and governemnt bans on MQM's leader, it 
-is said that Karachi is up for grabs. Following graph shows projection for Sindh's National Assembly seats.  </p>
+<p> Following graph shows projection for Baluchistan's National Assembly seats.  </p>
 </div>
 <div id="overallProjection" ></div>
 <script src="js/projection_baluchistan.js"></script>
