baluchistan added added

--- a/pages/kpk.html
+++ b/pages/kpk.html
@@ -43,7 +43,7 @@ the province and it will get its government back despite past history of the pro
 shows projection of seats for KPK.   </p>
 </div>
 <div id="overallProjection" ></div>
-<script src="js/projection_KPK.js"></script>
+<script src="js/projection_kpk.js"></script>
 
 <div class="b">
 <h3 class="b">Popularity Trends in KPK</h3>
