--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: election prediction
+title: Analysis of Election
 ---
 
 <style>
@@ -21,8 +21,8 @@ div.a {
 }
 div.b{
 	text-align:center;
-	margin-left: 20%;
-    margin-right:20%;
+	margin-left: 10%;
+    margin-right:10%;
 
 }
 
@@ -44,7 +44,7 @@ div.b{
 <script src="js/projection.js"></script>
 
 <div class="b">
-<h3 class="b">Popularity Trends for Top 3 Political Parties on Twitter</h3>
+<h3 class="b">Popularity Trends of Major Political Parties</h3>
 </div>
 <div class="a">
 
