--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@ object {
    margin-left: auto;
    margin-right: auto;
 }
-
+.map{
+   position: relative;
+   margin-left: auto;
+   margin-right: auto;
+}
 </style>
 <body>
 <script src="https://code.highcharts.com/highcharts.js"></script>
