--- a/map.html
+++ b/map.html
@@ -45,7 +45,7 @@
   Others
    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script src="js/map.js"></script>
-  <div id="chart_div" style="width: 100%; height: 100%; align: center;"></div>
+  <div id="chart_div" style="width: 600; height: 1000; align: center;"></div>
 </div>   
 </center>
 
