--- a/index.html
+++ b/index.html
@@ -49,18 +49,8 @@ div.title{
 .Others{
     background-color: #800080;
 }
-object {
-  overflow-x: false;
-  overflow-y: hidden;
-    position: relative;
-   margin-left: auto;
-   margin-right: auto;
-}
-.map{
-   position: relative;
-   margin-left: auto;
-   margin-right: auto;
-}
+
+
 </style>
 <body>
 <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -84,7 +74,7 @@ object {
 <h2>Dot Map Representation</h2>
 <div>
 <div id="map">
-<object style="width: 100%; height: 100%; overflow:hidden; type="text/html" data="map.html"></object>
+<object style="width: 100%; height: 100%; type="text/html" data="map.html"></object>
 
 </class>
 
