--- a/map_real.html
+++ b/map_real.html
@@ -8,7 +8,6 @@
     width: 15px;
     border-radius: 50%;
     display: inline-block;
-	align: center;
 }
 .PTI{
     background-color: #FF0000;
@@ -32,24 +31,23 @@
 
 	<title>I'm Learning D3</title>
 	<!-- Load the D3 library here -->
-	<<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+	
 </head>
 <body>
 <center>
-<div style="align-text:center">
-   <span class="dot PTI"> </span>
-  PTI  <span class="dot PML-N"></span>
+<div style="align:center">
+   <span class="dot PTI"></span>
+  PTI <span class="dot PML-N"></span>
   PML-N <span class="dot PPPP"></span>
   PPPP <span class="dot MMA"></span>
   MMA <span class="dot IND"></span>
   IND <span class="dot Others"></span>
-  Other 
-  <script src="js/map.js"></script>
-  <div id="chart_div" style="width: 1200px; height: 500px; align: center;"></div>
-</div>
-</center> 
-  
+  Others
+   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <script src="js/map_real.js"></script>
+  <div id="chart_div" style="width: 600; height: 1000; align: center;"></div>
+</div>   
+</center>
 
 </body>
 </html>
