many new additions including visitor map

--- a/index.html
+++ b/index.html
@@ -90,5 +90,5 @@ shows changing popularity trends over the days. </p>
 <div id="container" ></div>
 <script src="js/index.js"></script>
 
-
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=oprPsmvm29ARXx2Q0Bd2nOPsfIw2GRw52VGRdKRtaDk&cl=ffffff&w=a"></script>
 </body>
